.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for 2-4
Info: Nothing to build for 2-4
Info: Nothing to build for 2-4
23:14:08 **** Rebuild of configuration Debug for project 1-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\1-2.o" "..\\src\\1-2.c" 
..\src\1-2.c: In function 'main':
..\src\1-2.c:46:5: warning: implicit declaration of function 'system' [-Wimplicit-function-declaration]
     system("pause");
     ^~~~~~
gcc -o 1-2.exe "src\\1-2.o" 
23:14:22 **** Incremental Build of configuration Debug for project 1-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\1-2.o" "..\\src\\1-2.c" 
gcc -o 1-2.exe "src\\1-2.o" 
Info: Nothing to build for 2-4
23:14:56 **** Incremental Build of configuration Debug for project 2-4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-4.o" "..\\src\\2-4.c" 
gcc -o 2-4.exe "src\\2-4.o" 
23:53:29 **** Rebuild of configuration Debug for project 2-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-2.o" "..\\src\\2-2.c" 
gcc -o 2-2.exe "src\\2-2.o" 
23:54:21 **** Incremental Build of configuration Debug for project 2-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-2.o" "..\\src\\2-2.c" 
gcc -o 2-2.exe "src\\2-2.o" 
23:57:29 **** Incremental Build of configuration Debug for project 2-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-2.o" "..\\src\\2-2.c" 
gcc -o 2-2.exe "src\\2-2.o" 
Info: Nothing to build for 2-2
23:59:05 **** Incremental Build of configuration Debug for project 2-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-2.o" "..\\src\\2-2.c" 
..\src\2-2.c: In function 'main':
..\src\2-2.c:47:11: error: 'contadorNegativos' undeclared (first use in this function)
           contadorNegativos++;
           ^~~~~~~~~~~~~~~~~
..\src\2-2.c:47:11: note: each undeclared identifier is reported only once for each function it appears in
..\src\2-2.c:48:11: error: 'acumuladorNegativos' undeclared (first use in this function)
           acumuladorNegativos += nro;
           ^~~~~~~~~~~~~~~~~~~
23:59:08 **** Incremental Build of configuration Debug for project 2-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-2.o" "..\\src\\2-2.c" 
..\src\2-2.c: In function 'main':
..\src\2-2.c:47:11: error: 'contadorNegativos' undeclared (first use in this function)
           contadorNegativos++;
           ^~~~~~~~~~~~~~~~~
..\src\2-2.c:47:11: note: each undeclared identifier is reported only once for each function it appears in
..\src\2-2.c:48:11: error: 'acumuladorNegativos' undeclared (first use in this function)
           acumuladorNegativos += nro;
           ^~~~~~~~~~~~~~~~~~~
23:59:11 **** Incremental Build of configuration Debug for project 2-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-2.o" "..\\src\\2-2.c" 
..\src\2-2.c: In function 'main':
..\src\2-2.c:47:11: error: 'contadorNegativos' undeclared (first use in this function)
           contadorNegativos++;
           ^~~~~~~~~~~~~~~~~
..\src\2-2.c:47:11: note: each undeclared identifier is reported only once for each function it appears in
..\src\2-2.c:48:11: error: 'acumuladorNegativos' undeclared (first use in this function)
           acumuladorNegativos += nro;
           ^~~~~~~~~~~~~~~~~~~
23:59:19 **** Incremental Build of configuration Debug for project 2-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-2.o" "..\\src\\2-2.c" 
..\src\2-2.c: In function 'main':
..\src\2-2.c:47:11: error: 'contadorNegativos' undeclared (first use in this function)
           contadorNegativos++;
           ^~~~~~~~~~~~~~~~~
..\src\2-2.c:47:11: note: each undeclared identifier is reported only once for each function it appears in
..\src\2-2.c:48:11: error: 'acumuladorNegativos' undeclared (first use in this function)
           acumuladorNegativos += nro;
           ^~~~~~~~~~~~~~~~~~~
00:00:13 **** Incremental Build of configuration Debug for project 2-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-2.o" "..\\src\\2-2.c" 
..\src\2-2.c: In function 'main':
..\src\2-2.c:47:11: error: 'contadorNegativos' undeclared (first use in this function)
           contadorNegativos++;
           ^~~~~~~~~~~~~~~~~
..\src\2-2.c:47:11: note: each undeclared identifier is reported only once for each function it appears in
..\src\2-2.c:48:11: error: 'acumuladorNegativos' undeclared (first use in this function)
           acumuladorNegativos += nro;
           ^~~~~~~~~~~~~~~~~~~
00:05:26 **** Incremental Build of configuration Debug for project 2-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-2.o" "..\\src\\2-2.c" 
..\src\2-2.c: In function 'main':
..\src\2-2.c:47:11: error: 'contadorNegativos' undeclared (first use in this function)
           contadorNegativos++;
           ^~~~~~~~~~~~~~~~~
..\src\2-2.c:47:11: note: each undeclared identifier is reported only once for each function it appears in
..\src\2-2.c:48:11: error: 'acumuladorNegativos' undeclared (first use in this function)
           acumuladorNegativos += nro;
           ^~~~~~~~~~~~~~~~~~~
00:05:39 **** Incremental Build of configuration Debug for project 2-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-2.o" "..\\src\\2-2.c" 
..\src\2-2.c: In function 'main':
..\src\2-2.c:47:11: error: 'contadorNegativos' undeclared (first use in this function)
           contadorNegativos++;
           ^~~~~~~~~~~~~~~~~
..\src\2-2.c:47:11: note: each undeclared identifier is reported only once for each function it appears in
..\src\2-2.c:48:11: error: 'acumuladorNegativos' undeclared (first use in this function)
           acumuladorNegativos += nro;
           ^~~~~~~~~~~~~~~~~~~
00:07:05 **** Incremental Build of configuration Debug for project 2-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-2.o" "..\\src\\2-2.c" 
gcc -o 2-2.exe "src\\2-2.o" 
Info: Nothing to build for 2-2
Info: Nothing to build for 2-4
Info: Nothing to build for 2-3
Info: Nothing to build for 2-3
Info: Nothing to build for 2-3
01:21:40 **** Incremental Build of configuration Debug for project 2-3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-3.o" "..\\src\\2-3.c" 
gcc -o 2-3.exe "src\\2-3.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file 2-3.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
01:22:01 **** Incremental Build of configuration Debug for project 2-3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-3.o" "..\\src\\2-3.c" 
..\src\2-3.c: In function 'main':
..\src\2-3.c:49:6: warning: unused variable 'descuento' [-Wunused-variable]
  int descuento = 0;
      ^~~~~~~~~
gcc -o 2-3.exe "src\\2-3.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file 2-3.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
01:24:10 **** Incremental Build of configuration Debug for project 2-3 ****
Info: Internal Builder is used for build
gcc -o 2-3.exe "src\\2-3.o" 
01:29:21 **** Incremental Build of configuration Debug for project 2-3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-3.o" "..\\src\\2-3.c" 
gcc -o 2-3.exe "src\\2-3.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file 2-3.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
01:29:28 **** Incremental Build of configuration Debug for project 2-3 ****
Info: Internal Builder is used for build
gcc -o 2-3.exe "src\\2-3.o" 
01:52:50 **** Incremental Build of configuration Debug for project 2-3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2-3.o" "..\\src\\2-3.c" 
gcc -o 2-3.exe "src\\2-3.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file 2-3.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
01:52:57 **** Incremental Build of configuration Debug for project 2-3 ****
Info: Internal Builder is used for build
gcc -o 2-3.exe "src\\2-3.o" 
